// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs the expected tree when there are no predictions 1`] = `
<div
  className="bus"
>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      No bus stops added.
    </CardBody>
  </Card>
  <Predictions
    className=""
    predictions={Array []}
    removeStopRoute={[Function]}
  />
  <div
    className="d-flex align-items-start justify-content-between"
  >
    <EditTogglers
      addForm={
        Object {
          "addStop": [Function],
          "errMsg": "",
          "getNearbyStops": [Function],
          "loading": false,
          "nearbyStops": Array [
            Object {
              "directionTitle": "FIXME",
              "stopTag": "FIXME",
              "stopTitle": "FIXME",
              "tag": "FIXME",
              "title": "FIXME",
            },
          ],
          "toggleBusAddStopForm": [Function],
          "validate": [Function],
        }
      }
      className=""
      predictions={Array []}
      showBusRemoval={false}
      toggleBusRemove={[Function]}
    />
    <TimeSinceLastUpdated
      className=""
      lastUpdated={"2019-12-11T00:00:00.000Z"}
      msUntilWarning={10000}
    />
  </div>
</div>
`;

exports[`outputs the expected tree when there is at least one prediction in the array 1`] = `
<div
  className="bus"
>
  <Predictions
    className=""
    predictions={
      Array [
        Object {
          "$$hashKey": "object:17",
          "_agencyTitle": "SF Muni",
          "_routeTag": "14",
          "_routeTitle": "14-Mission",
          "_stopTag": "5565",
          "_stopTitle": "Mission St & 24th St",
          "className": "",
          "direction": Object {
            "_title": "Inbound to Ferry Plaza",
            "prediction": Array [
              Object {
                "$$hashKey": "object:19",
                "_block": "1620",
                "_dirTag": "14___I_F00",
                "_epochTime": "1588198229803",
                "_isDeparture": "false",
                "_minutes": "4",
                "_seconds": "296",
                "_tripTag": "9359239",
                "_vehicle": "6609",
              },
              Object {
                "$$hashKey": "object:20",
                "_block": "1622",
                "_dirTag": "14___I_F00",
                "_epochTime": "1588198681179",
                "_isDeparture": "false",
                "_minutes": "12",
                "_seconds": "747",
                "_tripTag": "9359240",
                "_vehicle": "6599",
              },
              Object {
                "$$hashKey": "object:21",
                "_block": "1633",
                "_dirTag": "14___I_F00",
                "_epochTime": "1588199412858",
                "_isDeparture": "false",
                "_minutes": "24",
                "_seconds": "1479",
                "_tripTag": "9359237",
                "_vehicle": "6547",
              },
              Object {
                "$$hashKey": "object:22",
                "_block": "1628",
                "_dirTag": "14___I_F00",
                "_epochTime": "1588199419316",
                "_isDeparture": "false",
                "_minutes": "24",
                "_seconds": "1486",
                "_tripTag": "9359243",
                "_vehicle": "6533",
              },
            ],
          },
          "message": Array [
            Object {
              "_priority": "Normal",
              "_text": "Service frequency for this stop is 10 minutes or less.",
            },
            Object {
              "_priority": "Low",
              "_text": "Muni for essential trips only. Masks or face coverings are required. Practice physical distancing. Visit sfmta.com/COVID19 for more info.",
            },
            Object {
              "_priority": "Low",
              "_text": "Text COVID19SF to 888-777 for official updates. Visit sfdph.org",
            },
            Object {
              "_priority": "Normal",
              "_text": "Board thru rear doors. Front door for accessibility needs only.",
            },
          ],
        },
      ]
    }
    removeStopRoute={[Function]}
  />
  <div
    className="d-flex align-items-start justify-content-between"
  >
    <EditTogglers
      addForm={
        Object {
          "addStop": [Function],
          "errMsg": "",
          "getNearbyStops": [Function],
          "loading": false,
          "nearbyStops": Array [
            Object {
              "directionTitle": "FIXME",
              "stopTag": "FIXME",
              "stopTitle": "FIXME",
              "tag": "FIXME",
              "title": "FIXME",
            },
          ],
          "toggleBusAddStopForm": [Function],
          "validate": [Function],
        }
      }
      className=""
      predictions={
        Array [
          Object {
            "$$hashKey": "object:17",
            "_agencyTitle": "SF Muni",
            "_routeTag": "14",
            "_routeTitle": "14-Mission",
            "_stopTag": "5565",
            "_stopTitle": "Mission St & 24th St",
            "className": "",
            "direction": Object {
              "_title": "Inbound to Ferry Plaza",
              "prediction": Array [
                Object {
                  "$$hashKey": "object:19",
                  "_block": "1620",
                  "_dirTag": "14___I_F00",
                  "_epochTime": "1588198229803",
                  "_isDeparture": "false",
                  "_minutes": "4",
                  "_seconds": "296",
                  "_tripTag": "9359239",
                  "_vehicle": "6609",
                },
                Object {
                  "$$hashKey": "object:20",
                  "_block": "1622",
                  "_dirTag": "14___I_F00",
                  "_epochTime": "1588198681179",
                  "_isDeparture": "false",
                  "_minutes": "12",
                  "_seconds": "747",
                  "_tripTag": "9359240",
                  "_vehicle": "6599",
                },
                Object {
                  "$$hashKey": "object:21",
                  "_block": "1633",
                  "_dirTag": "14___I_F00",
                  "_epochTime": "1588199412858",
                  "_isDeparture": "false",
                  "_minutes": "24",
                  "_seconds": "1479",
                  "_tripTag": "9359237",
                  "_vehicle": "6547",
                },
                Object {
                  "$$hashKey": "object:22",
                  "_block": "1628",
                  "_dirTag": "14___I_F00",
                  "_epochTime": "1588199419316",
                  "_isDeparture": "false",
                  "_minutes": "24",
                  "_seconds": "1486",
                  "_tripTag": "9359243",
                  "_vehicle": "6533",
                },
              ],
            },
            "message": Array [
              Object {
                "_priority": "Normal",
                "_text": "Service frequency for this stop is 10 minutes or less.",
              },
              Object {
                "_priority": "Low",
                "_text": "Muni for essential trips only. Masks or face coverings are required. Practice physical distancing. Visit sfmta.com/COVID19 for more info.",
              },
              Object {
                "_priority": "Low",
                "_text": "Text COVID19SF to 888-777 for official updates. Visit sfdph.org",
              },
              Object {
                "_priority": "Normal",
                "_text": "Board thru rear doors. Front door for accessibility needs only.",
              },
            ],
          },
        ]
      }
      showBusRemoval={false}
      toggleBusRemove={[Function]}
    />
    <TimeSinceLastUpdated
      className=""
      lastUpdated={"2019-12-11T00:00:00.000Z"}
      msUntilWarning={10000}
    />
  </div>
</div>
`;
